# managementbook-

./: CMakeLists.txt  README.md  create.sql  test.db
include/: book.h  global.h  purchases.h  suppliers.h  typedate.h
src/: CMakeLists.txt  book.cpp  global.cpp  main  main.cpp  purchases.cpp  suppliers.cpp
